--- a/src/app/components/hunts/hunts.component.html
+++ b/src/app/components/hunts/hunts.component.html
@@ -102,7 +102,7 @@
                   <td colspan="2" class="px-2 uppercase text-xs font-semibold text-gray-400 text-center whitespace-nowrap">Success Rate</td>
                 </tr>
                 <tr>
-                  <td colspan="2" class="px-2 {{ hunt | successRateColor }} font-bold text-center text-sm">
+                  <td colspan="2" class="px-2 font-bold text-center text-sm {{ hunt | successRateColor }}">
                     {{ hunt | successRate }}&percnt;
                   </td>
                 </tr>
