--- a/src/styles.scss
+++ b/src/styles.scss
@@ -181,12 +181,13 @@ button.btn {
   padding: 6px 8px;
   font: 14px/16px Arial, Helvetica, sans-serif;
   background: white;
-  background: rgba(76, 73, 73, 0.8);
+  background: #333333;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
+  border: 1px solid #666666;
 }
 .info h4 {
-  margin: 0 0 5px;
+  margin: 0 0 2px;
   color: #ffffff;
   text-align: center;
   font-weight: bold;
