--- a/src/app/components/wxDetails/wxDetails.component.html
+++ b/src/app/components/wxDetails/wxDetails.component.html
@@ -50,7 +50,7 @@
             @for (hist of $any(wx.histAvgs[0]); track hist.day; let last = $last) {
               <div class="p-1 text-sm {{ $any(wx.histAvgs[0]).length < 3 ? 'w-1/2' : 'w-1/3' }} {{ !last ? 'border-r border-gray-400' : 'border-none' }}">
                 <div class="flex-none italic text-center">
-                  {{ hist.month | date: 'MMMM' }} {{ hist.day | ordinal }}
+                  {{ hist.month | month | date: 'MMMM' }} {{ hist.day | ordinal }}
                 </div>
                 <div class="flex-none text-center">
                   <div class="">
